<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                tools:context=".UserArticle">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="300dp">


                        <ImageView
                            android:id="@+id/imageArticleUserXml"
                            android:layout_width="match_parent"
                            android:layout_height="300dp"
                            android:scaleType="fitXY"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="8dp"
                            android:contentDescription="@string/image_article_user"
                            android:src="@drawable/ic_category"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tvArticleUserXml"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:layout_marginTop="24dp"
                            android:text="@string/article_user"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/imageArticleUserXml"
                            tools:ignore="MissingConstraints" />

                        <TextView
                            android:id="@+id/tvArticleCategory"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:layout_marginStart="30dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="30dp"
                            android:text="Category"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/articleTitleXml"
                            tools:ignore="MissingConstraints" />

                        <TextView
                            android:id="@+id/articleDescraptionXml"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="10dp"

                            android:layout_marginBottom="15dp"
                            android:text="@string/articleDescription"
                            android:textSize="14sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tvArticleCategory"
                            app:layout_constraintVertical_bias="0.795" />

                        <TextView
                            android:id="@+id/articleTitleXml"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:text="@string/article_title"
                            android:textSize="20sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tvArticleUserXml" />

                        <TextView
                            android:id="@+id/articleDateXml"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="108dp"
                            android:layout_marginEnd="10dp"
                            android:text="@string/date"
                            android:textSize="16sp"
                            app:layout_constraintBottom_toBottomOf="@+id/tvArticleUserXml"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.949"
                            app:layout_constraintStart_toEndOf="@+id/tvArticleUserXml"
                            app:layout_constraintTop_toTopOf="@+id/tvArticleUserXml"
                            app:layout_constraintVertical_bias="1.0" />


                    </androidx.constraintlayout.widget.ConstraintLayout>


                </ScrollView>


            </FrameLayout>


    </LinearLayout>


</layout>