<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment.ArticleInformation">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView

                android:id="@+id/articlePhotoInfo_xml"
                android:layout_width="match_parent"


                android:layout_height="300dp"
                android:layout_margin="5dp"
                android:scaleType="fitXY"
                android:src="@drawable/feather_logos_transparent2" />

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/userNameInfo_xml"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"

                    android:layout_weight="1"
                    android:text="@string/user_name"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/articleDateInfo_xml"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"

                    android:layout_weight="1"

                    android:gravity="right"
                    android:text="Date"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/titleArticleInfo_xml"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"

                android:text="@string/title"


                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/articleCategoryInfo_xml"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"

                android:text="@string/category"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/articleDescraptionInfo_xml"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/articleDescription"
                android:textSize="14sp"
                android:textStyle="bold" />

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_marginEnd="30dp"
                    android:id="@+id/favoriteArticle_xml"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_favorite_border"
                    android:visibility="visible"
                    android:contentDescription="TODO" />

                <ImageView
                    android:id="@+id/commentButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight="0"
                    android:src="@drawable/ic_baseline_comment_24" />

                <ImageView
                    android:layout_marginStart="50dp"

                    android:id="@+id/shearArticle_xml"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_share"
                    android:contentDescription="TODO" />
            </LinearLayout>

        </LinearLayout>


    </FrameLayout>

</ScrollView>